--- a/HW1/Site/catalog/catalog.html
+++ b/HW1/Site/catalog/catalog.html
@@ -6,16 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Каталог</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
-    <a href="../index.html">Главная</a>
-    <a href="">Каталог</a>
-    <a href="">Контакты</a>
+    <a class="nav_lnk" href="../index.html">Главная</a>
+    <a class="nav_lnk" href="">Каталог</a>
+    <a class="nav_lnk" href="">Контакты</a>
 
-    <h1>Каталог</h1>
+    <h1 class="title">Каталог</h1>
 
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est, aliquid, aperiam exercitationem dicta quam maiores
+    <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est, aliquid, aperiam exercitationem dicta
+        quam maiores
         suscipit soluta harum ex perferendis obcaecati ea architecto ipsa tempora totam id eius, sit facilis consectetur
         voluptatum repellendus? Provident mollitia molestias voluptatem molestiae sequi optio necessitatibus, sed modi
         facilis voluptate voluptatibus, officiis totam rem quia accusamus cupiditate laborum esse distinctio pariatur
@@ -27,20 +29,22 @@
         fugiat quaerat cumque culpa atque, dignissimos iure eligendi fugit odio expedita. Dolorum, sint odio minus ex
         assumenda cum voluptatem.</p>
 
-    <h2>Арбуз</h2>
-    <p><img src="../img/watermelon.jpg" alt="watermelon"><br> Арбуз – это однолетнее травянистое растение семейства
+    <h2 class="subtitle">Арбуз</h2>
+    <p class="text"><img src="../img/watermelon.jpg" alt="watermelon"><br> Арбуз – это однолетнее травянистое растение
+        семейства
         тыквенные, бахчевая культура. Имеет тонкие, длинные ползучие стебли, длиной до 4 м и более. Молодые стебли густо
         опушены мягкими волосками. Листья на длинных черешках, грубоватые, волосистые, в очертании
         треугольно-яйцевидные, крупные, с перисто-рассеченными долями.</p>
 
-    <h2>Клубника</h2>
-    <p><img src="../img/strawberry.jpg" alt="strawberry"><br>Клубника (лат. Fragaria ananassa) — многолетнее растение
+    <h2 class="subtitle">Клубника</h2>
+    <p class="text"><img src="../img/strawberry.jpg" alt="strawberry"><br>Клубника (лат. Fragaria ananassa) —
+        многолетнее растение
         рода
         Земляника, двойной гибрид своей прародительницы, дикой чилийской земляники. Чаще всего клубникой называют
         землянику садовую, с характерными красными крупными плодами, сладкими и очень ароматными.</p>
 
-    <h2>Огурец</h2>
-    <p><img src="../img/cucumber.jpg" alt="cocumber"><br>Плоды вытянутой цилиндрической формы, имеют кожуру
+    <h2 class="subtitle">Огурец</h2>
+    <p class="text"><img src="../img/cucumber.jpg" alt="cocumber"><br>Плоды вытянутой цилиндрической формы, имеют кожуру
         ярко-зеленого и
         темно-зеленого цвета и сочную мякоть белого или слегка зеленоватого оттенка, многосемянные. Вкус огурца свежий,
         нейтральный. Овощ обладает свежим запахом, это позволяет его легко комбинировать с яркими по вкусу продуктами.
