--- a/HW1/Site/index.html
+++ b/HW1/Site/index.html
@@ -6,26 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная страница</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <a href="">Главная</a>
-    <a href="catalog/catalog.html">Каталог</a>
-    <a href="">Контакты</a>
+    <a class="nav_lnk" href="">Главная</a>
+    <a class="nav_lnk" href="catalog/catalog.html">Каталог</a>
+    <a class="nav_lnk" href="">Контакты</a>
 
-    <h1>Главная страница</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat deleniti unde delectus nemo labore, sequi
+    <h1 class="title">Главная страница</h1>
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat deleniti unde delectus nemo labore,
+        sequi
         dignissimos omnis, possimus maxime, quo necessitatibus illo iure quam quia quibusdam ex velit recusandae
         consectetur hic sint. Ad enim tenetur similique maxime repudiandae doloremque error temporibus fugit laborum.
         Consequuntur, nostrum odio eum assumenda, qui esse vero, consectetur quibusdam excepturi aut veritatis. Porro
         quaerat modi et quas necessitatibus ipsum explicabo dolore quibusdam enim consequatur a officiis fuga dolorem
         minima similique fugit excepturi ducimus magni, ad commodi expedita delectus voluptate! Facilis molestias</p>
-    <h2>Добро пожаловать на сайт</h2>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit nostrum quisquam repellat amet facere nisi, debitis
+    <h2 class="subtitle">Добро пожаловать на сайт</h2>
+    <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit nostrum quisquam repellat amet facere
+        nisi, debitis
         architecto iste rerum accusa</p>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda aliquam, velit eligendi eum, consequuntur
+    <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda aliquam, velit eligendi eum,
+        consequuntur
         ipsam neque atque deleniti aperiam quae fuga, animi repellendus explicabo dolor.</p>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate beatae impedit consequuntur, consequatur
+    <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate beatae impedit consequuntur,
+        consequatur
         inventore facere cumque. Magni assumenda veritatis odit illo placeat ipsam facere? Nihil voluptatibus illo alias
         excepturi consectetur modi ipsum tenetur quibusdam aspernatur? Autem sit eum quis dolorem non, ad repellendus
         quod incidunt explicabo deleniti corporis dolor sunt?</p>
