--- a/HW3/Site/index.html
+++ b/HW3/Site/index.html
@@ -11,10 +11,10 @@
 
 <body>
     <div class="top">
-        <div class="top__header">
+        <div class="top__header center">
+            <img src="img/nav_logo.svg" alt="nav_logo" class="header__img">
             <div class="top__nav">
-                <img src="img/nav_logo.svg" alt="nav_logo">
-                <a href="#" class="header__link">Home</a>
+                <a href="#" class="header__link__first">Home</a>
                 <a href="#" class="header__link">About Us</a>
                 <a href="#" class="header__link">Services</a>
                 <a href="#" class="header__link">Features<svg width="8" height="5" viewBox="0 0 8 5" fill="none"
@@ -27,27 +27,28 @@
                 <a href="#" class="header__link">Contact</a>
             </div>
         </div>
-        <div class="top__content">
+        <div class="top__content  center">
             <div class="top__info">
-                <h1 class="title">SEO & Digital
+                <h1 class="top_title">SEO & Digital
                     Marketing For Your
                     Website.</h1>
-                <p class="text">Provide all kind of seo services and help to improve
+                <p class="top_subtitle">Provide all kind of seo services and help to improve
                     seo ranking. Globally incubate standards.</p>
                 <div class="top__button_area">
                     <button class="top_button">Start now</button>
                     <p class="button__area_text">Watch video</p>
                 </div>
-                <img src="img/top_content_img.svg" alt="image" class="top__content__img">
             </div>
+            <img src="img/top_content_img.svg" alt="image" class="top__content__img">
         </div>
-        <div class="top__brands">
-            <img src="img/brand1.svg" alt="brand" class="top__brands">
-            <img src="img/brand2.svg" alt="brand" class="top__brands">
-            <img src="img/brand3.svg" alt="brand" class="top__brands">
-            <img src="img/brand4.svg" alt="brand" class="top__brands">
-            <img src="img/brand5.svg" alt="brand" class="top__brands">
-            <img src="img/brand6.svg" alt="brand" class="top__brands">
+        <div class="top__brands  center">
+            <div class="top__brands__items">
+                <img src="img/brand2.svg" alt="brand" class="top__brands__img">
+                <img src="img/brand3.svg" alt="brand" class="top__brands__img">
+                <img src="img/brand4.svg" alt="brand" class="top__brands__img">
+                <img src="img/brand5.svg" alt="brand" class="top__brands__img">
+                <img src="img/brand6.svg" alt="brand" class="top__brands__img">
+            </div>
         </div>
     </div>
 </body>
