--- a/HW3/Site/index.html
+++ b/HW3/Site/index.html
@@ -35,7 +35,7 @@
                 <p class="top_subtitle">Provide all kind of seo services and help to improve
                     seo ranking. Globally incubate standards.</p>
                 <div class="top__button_area">
-                    <button class="top_button">Start now</button>
+                    <button class="top_button" type="submit">Start now</button>
                     <p class="button__area_text">Watch video</p>
                 </div>
             </div>
