--- a/HW6/index.html
+++ b/HW6/index.html
@@ -23,19 +23,57 @@
             <div class="menu__and__links">
                 <a href="" class="hamburger"><img src="img/header__hamburger__img.svg " alt="hamburger__menu"></a>
                 <a href="" class="user"><img src="img/header__user__img.svg" alt="user"></a>
-                <a href="" class="basket"><img src="img/header__basket__img.svg" alt="basket"></a>
+                <div class="basket">
+                    <a href="" class="basket__img"><img src="img/header__basket__img.svg" alt="basket"></a>
+                    <div class="counter">
+                        <p class="counter__text">5</p>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="title__block">
             <img src="img/tb__img.svg" alt="image" class="title__block__img">
-            <img src="img/tb__title.svg" alt="title__image" class="title__block__title">
+            <div class="title__block__title">
+                <img src="img/tb_rect.svg" alt="" class="tb__rectangle">
+                <div class="tb_title">
+                    <p class="tb__up__text">THE BRAND</p>
+                    <div class="tb__down__text">
+                        <p class="tb__left__down__text">OF LUXERIOUS </p>
+                        <p class="tb__right__down__text">FASHION</p>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="content">
             <div class="up__grid__block">
-                <img src="img/ub_img1.svg" alt="image" class="up__img">
-                <img src="img/ub_img2.svg" alt="image" class="up__img">
-                <img src="img/ub_img3.svg" alt="image" class="up__img">
-                <img src="img/ub_img4.svg" alt="image" class="down__img">
+                <div class="up__img__block">
+                    <img src="img/first__img.svg" alt="up__image" class="up__img">
+                    <div class="first__img__block__text img__txt">
+                        <p class="up__img__block__text">30% OFF</p>
+                        <p class="down__img__block__text">FOR WOMEN</p>
+                    </div>
+                </div>
+                <div class="up__img__block">
+                    <img src="img/second__img.svg" alt="" class="up__img">
+                    <div class="second__img__block__text img__txt">
+                        <p class="up__img__block__text">HOT DEAL</p>
+                        <p class="down__img__block__text">FOR MEN</p>
+                    </div>
+                </div>
+                <div class="up__img__block">
+                    <img src="img/third__img.svg" alt="" class="up__img">
+                    <div class="third__img__block__text img__txt">
+                        <p class="up__img__block__text">NEW ARRIVALS</p>
+                        <p class="down__img__block__text">FOR KIDS</p>
+                    </div>
+                </div>
+                <div class="down__img__block">
+                    <img src="img/fourth__img.svg" alt="" class="down__img">
+                    <div class="fourth__img__block__text img__txt">
+                        <p class="up__img__block__text">LUXIROUS & TRENDY</p>
+                        <p class="down__img__block__text">ACCESORIES</p>
+                    </div>
+                </div>
             </div>
             <div class="down__grid__block">
                 <div class="subtitle__and__text">
