--- a/HW6/index.html
+++ b/HW6/index.html
@@ -22,9 +22,9 @@
             </div>
             <div class="menu__and__links">
                 <a href="" class="hamburger"><img src="img/header__hamburger__img.svg " alt="hamburger__menu"></a>
-                <a href="" class="user"><img src="img/header__user__img.svg" alt="user"></a>
+                <a href="" class="user"><img src="img/header__user__img.svg" alt="user" class="usr"></a>
                 <div class="basket">
-                    <a href="" class="basket__img"><img src="img/header__basket__img.svg" alt="basket"></a>
+                    <a href="" class="basket__img"><img src="img/header__basket__img.svg" alt="basket" class="bsc"></a>
                     <div class="counter">
                         <p class="counter__text">5</p>
                     </div>
